--- a/company-app/src/styles/_colours.scss
+++ b/company-app/src/styles/_colours.scss
@@ -1,4 +1,7 @@
 $primary_text_colour:rgb(68,68, 68);
+$secondary_text_colour: rgb(180, 180, 184);
 
 $primary_accent_colour: rgb(38, 102, 169);
 $secondary_accent_colour: rgb(235, 245, 255);
+
+$border_colour: rgb(231, 231, 231)
