improved mobile layout - textNextToImageCard layout OK (needs proofreading though

--- a/company-app/src/styles/_colours.scss
+++ b/company-app/src/styles/_colours.scss
@@ -1,5 +1,6 @@
 $primary_text_colour:rgb(68,68, 68);
 $secondary_text_colour: rgb(180, 180, 184);
+$tertiary_text_colour:rgb(255, 255, 255);
 
 $primary_accent_colour: rgb(38, 102, 169);
 $secondary_accent_colour: rgb(235, 245, 255);
