--- a/company-app/src/Footer/Footer.scss
+++ b/company-app/src/Footer/Footer.scss
@@ -2,9 +2,11 @@
 @import "../styles/_fonts";
 @import "../styles/margins";
 
+* {
+    box-sizing: border-box;
+}
 footer { 
     border-top: solid $border_colour 1px;
-    box-sizing: border-box;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -15,18 +17,20 @@ footer {
     p {
         color: $secondary_text_colour;
         font-family: $paragraph_font;
-        font-size: 12px;
+        font-size: $paragraph_font_size;
     }
 
     a {
         color: rgb(180, 180, 184);
         font-family: $paragraph_font ;
-        font-size: 12px;
+        font-size: $paragraph_font_size;
     }
 }
 
 @media screen and (max-width:800px){
     footer{
+        margin-left: 0;
+        margin-right: 0; 
         justify-content: center;
-    }
+    } 
 }
