--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -32,7 +32,7 @@ nav {
     .link{
         color: $primary_text_colour;
         font-family: $paragraph-font;
-        font-size: 12px;
+        font-size: $paragraph_font_size;
         font-weight: bold;
         text-decoration: none;
         
@@ -43,10 +43,9 @@ nav {
         border-radius: 5px;
         border-style: none;
         color: $primary_accent_colour;
-        font-size: 12px;
+        font-size: $paragraph_font_size;
         font-weight: bold;
         padding: 10px 30px;
-    
     }
     
 }
@@ -55,6 +54,12 @@ nav {
 @media screen and (max-width:800px) {
     .links_container {
         display: none;
+    }
+    
+    nav{
+       margin-left: 0;
+       margin-right: 0; 
+       justify-content: center;
     }
 
 }
