banner is ready

--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -43,8 +43,9 @@ nav {
         border-radius: 5px;
         border-style: none;
         color: $primary_accent_colour;
+        font-family: $paragraph-font;
         font-size: $paragraph_font_size;
-        font-weight: bold;
+        font-weight: 700;
         padding: 10px 30px;
     }
     
