--- a/company-app/src/styles/_fonts.scss
+++ b/company-app/src/styles/_fonts.scss
@@ -4,4 +4,4 @@ $paragraph_font: 'Open Sans', sans-serif;
 $paragraph_font_size: 11px; 
 $paragraph_font_weight: 300; 
 
-
+$subtitle_font_size: 16px;
