--- a/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
+++ b/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
@@ -47,7 +47,7 @@
         color: $tertiary_text_colour;
         font-family: $paragraph_font;
         font-size: $paragraph_font_size;
-        font-weight: bold;
+        font-weight: 700;
         padding: 10px 30px;
         width: 150px;    
     }
