slowly getting there with the form..,

--- a/company-app/src/Banner/Banner.scss
+++ b/company-app/src/Banner/Banner.scss
@@ -24,6 +24,10 @@
         font-family: $paragraph_font;
     }
     
+    h1 {
+        font-size: 40px;
+    }
+
     p {
         font-size: $subtitle_font_size;
     }
