--- a/company-app/src/styles/_colours.scss
+++ b/company-app/src/styles/_colours.scss
@@ -5,4 +5,5 @@ $tertiary_text_colour:rgb(255, 255, 255);
 $primary_accent_colour: rgb(38, 102, 169);
 $secondary_accent_colour: rgb(235, 245, 255);
 
-$border_colour: rgb(231, 231, 231)
+$border_colour: rgb(231, 231, 231);
+$input_field_colour: rgb(246, 247, 252);
