--- a/company-app/src/Banner/Banner.scss
+++ b/company-app/src/Banner/Banner.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     height: 400px;
 }
