styled the form submitted box

--- a/company-app/src/styles/_colours.scss
+++ b/company-app/src/styles/_colours.scss
@@ -7,3 +7,6 @@ $secondary_accent_colour: rgb(235, 245, 255);
 
 $border_colour: rgb(231, 231, 231);
 $input_field_colour: rgb(246, 247, 252);
+
+$valid_box_colour: rgb(228, 242, 209);
+$valid_icon_background: rgb(125, 191, 47);
