--- a/company-app/src/styles/_colours.scss
+++ b/company-app/src/styles/_colours.scss
@@ -10,3 +10,5 @@ $input_field_colour: rgb(246, 247, 252);
 
 $valid_box_colour: rgb(228, 242, 209);
 $valid_icon_background: rgb(125, 191, 47);
+
+$additional_background_colour:rgba(68,68, 68, 0.7);
