--- a/company-app/src/styles/_fonts.scss
+++ b/company-app/src/styles/_fonts.scss
@@ -1,6 +1,6 @@
-$heading_font_size: 20px;
+$title_font_size: 20px;
 
-$paragraph_font: 'Open Sans', sans-serif;
+$main_font: Verdana, sans-serif;
 $paragraph_font_size: 11px; 
 $paragraph_font_weight: 300; 
 
