--- a/company-app/src/Banner/Banner.scss
+++ b/company-app/src/Banner/Banner.scss
@@ -21,7 +21,7 @@
 
     h1, p{
         color: $tertiary_text_colour;
-        font-family: $paragraph_font;
+        font-family: $main_font;
     }
     
     h1 {
@@ -37,9 +37,9 @@
         border-radius: 5px;
         border-style: none;
         color: $tertiary_text_colour;
-        font-family: $paragraph_font;
+        font-family: $main_font;
         font-size: $paragraph_font_size;
-        font-weight: 700 ;
+        font-weight: bold;
         text-decoration: none;
         padding: 10px 30px;
         width: 150px;    
