--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -12,8 +12,8 @@ nav {
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-left: $left_margin;
     margin-right: $right_margin;
 }
@@ -31,9 +31,8 @@ nav {
 
     .link{
         color: $primary_text_colour;
-        font-family: $paragraph-font;
+        font-family: $main-font;
         font-size: $paragraph_font_size;
-        font-weight: bold;
         text-decoration: none;
         
     }
@@ -43,12 +42,11 @@ nav {
         border-radius: 5px;
         border-style: none;
         color: $primary_accent_colour;
-        font-family: $paragraph-font;
+        font-family: $main_font;
         font-size: $paragraph_font_size;
-        font-weight: 700;
+        font-weight: bold;
         padding: 10px 30px;
-    }
-    
+    }    
 }
 
 
