--- a/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
+++ b/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
@@ -26,14 +26,14 @@
 
     h2 {
         color:$primary_text_colour;
-        font-family: $paragraph_font;
-        font-size: $heading_font_size;
+        font-family: $main_font;
+        font-size: $title_font_size ;
         font-weight: 400;
     }
 
     p,li {
         color: $primary_text_colour;
-        font-family: $paragraph_font;
+        font-family: $main_font;
         font-size: $paragraph_font_size;
     }
 
@@ -46,7 +46,7 @@
         border-radius: 5px;
         border-style: none;
         color: $tertiary_text_colour;
-        font-family: $paragraph_font;
+        font-family: $main_font;
         font-size: $paragraph_font_size;
         font-weight: 700;
         padding: 10px 30px;
