--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -14,8 +14,8 @@ nav {
     justify-content: space-between;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-left: $left_margin;
-    margin-right: $right_margin;
+    margin-left: $left_margin_desktop;
+    margin-right: $right_margin_desktop;
 }
 
 .logo_container {
