--- a/company-app/src/PlainTextCard/PlainTextCard.scss
+++ b/company-app/src/PlainTextCard/PlainTextCard.scss
@@ -10,8 +10,8 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    margin-left: $left_margin;
-    margin-right: $right_margin;
+    margin-left: $left_margin_desktop;
+    margin-right: $right_margin_desktop;
     padding-top: 20px;
     padding-bottom: 20px;
     
@@ -59,8 +59,8 @@
 @media screen and (max-width:800px) {
     .plain_text_card {
         align-items: center;
-        margin-left: 10px;
-        margin-right: 10px; 
+        margin-left: $side_margins_mobile;
+        margin-right: $side_margins_mobile; 
         justify-content: center;
     }
 
