--- a/company-app/src/Banner/Banner.scss
+++ b/company-app/src/Banner/Banner.scss
@@ -2,7 +2,6 @@
 @import "../styles/fonts";
 @import "../styles/margins";
 
-
 .banner_slide {
     background-size: cover;
     background-position-y: 25%; 
@@ -15,9 +14,9 @@
 }
 
 .banner_text {
-    margin-left: $left_margin;
-    margin-right: $right_margin;
-    max-width: 500px;
+    margin-left: $left_margin_desktop;
+    margin-right: $right_margin_desktop;
+    max-width: 400px;
 
     h1, p{
         color: $tertiary_text_colour;
@@ -25,39 +24,45 @@
     }
     
     h1 {
-        font-size: 40px;
+        font-size: 34px;
+        font-weight: normal;
     }
 
     p {
         font-size: $subtitle_font_size;
     }
 
-    .link {
-        background-color: $primary_accent_colour;
-        border-radius: 5px;
-        border-style: none;
-        color: $tertiary_text_colour;
-        font-family: $main_font;
-        font-size: $paragraph_font_size;
-        font-weight: bold;
-        text-decoration: none;
-        padding: 10px 30px;
-        width: 150px;    
-    }
+}
 
+.link_banner {
+    background-color: $primary_accent_colour;
+    border-radius: 5px;
+    border-style: none;
+    color: $tertiary_text_colour;
+    font-family: $main_font;
+    font-size: $paragraph_font_size;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px 30px;
 }
 
 @media  screen and (max-width:800px) {
     .banner_text {
-        margin-left: 10px;
-        margin-right: 10px; 
+        margin-left: $side_margins_mobile;
+        margin-right: $side_margins_mobile; 
     }    
 
     .banner_slide {
-        background-position-y: center;
         background-repeat: no-repeat;
+        background-position-y: center;
     }
-}
+
+    .link_banner{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+ }
 
 @media  screen and (max-width:600px) {
     .banner_slide {
