--- a/company-app/src/ContactMain/ContactMain.scss
+++ b/company-app/src/ContactMain/ContactMain.scss
@@ -10,8 +10,8 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-left: $left_margin;
-    margin-right: $right_margin;
+    margin-left: $left_margin_desktop;
+    margin-right: $right_margin_desktop;
 }
 
 .contact_text_container{
@@ -40,7 +40,7 @@
     }
 
     .contact_main {
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-left: $side_margins_mobile;
+        margin-right: $side_margins_mobile;
     }
 }
