--- a/company-app/src/styles/_margins.scss
+++ b/company-app/src/styles/_margins.scss
@@ -1,2 +1,3 @@
-$left_margin: 200px;
-$right_margin: 200px;
+$left_margin_desktop: 200px;
+$right_margin_desktop: 200px;
+$side_margins_mobile: 15px;
