--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -8,6 +8,7 @@
 
 nav {
     align-items: center;
+    border-bottom: solid $border_colour 1px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
