CradWithBackgroundImage OK, added some mixins for styling

--- a/company-app/src/AboutUsMain/AboutUsMain.scss
+++ b/company-app/src/AboutUsMain/AboutUsMain.scss
@@ -1,7 +1,6 @@
 @import "../styles/colours";
-@import "../styles/_fonts.scss";
+@import "../styles/fontsAndTextStyles";
 @import "../styles/margins";
-
 * {
     font-family: $main-font;
 }
