--- a/company-app/src/Banner/Banner.scss
+++ b/company-app/src/Banner/Banner.scss
@@ -1,5 +1,5 @@
 @import "../styles/colours";
-@import "../styles/fonts";
+@import "../styles/fontsAndTextStyles";
 @import "../styles/margins";
 
 .banner_slide {
