--- a/company-app/src/Footer/Footer.scss
+++ b/company-app/src/Footer/Footer.scss
@@ -1,5 +1,5 @@
-@import "../styles/_colours";
-@import "../styles/_fonts";
+@import "../styles/colours";
+@import "../styles/fontsAndTextStyles";
 @import "../styles/margins";
 
 * {
