--- a/company-app/src/Navbar/Navbar.scss
+++ b/company-app/src/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 @import "../styles/colours";
-@import "../styles/_fonts.scss";
+@import "../styles/fontsAndTextStyles";
 @import "../styles/margins";
 
 * {
