--- a/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
+++ b/company-app/src/TextNextToImageCard/TextNextToImageCard.scss
@@ -1,5 +1,5 @@
 @import "../styles/_colours";
-@import "../styles/_fonts";
+@import "../styles/fontsAndTextStyles";
 @import "../styles/_margins";
 
 * {
@@ -26,16 +26,12 @@
 
     h2 {
         color: $primary_text_colour;
-        font-family: $main_font;
-        font-size: $title_font_size ;
-        font-weight: normal;
+        @include standardTitle;
     }
 
     p,li {
         color: $primary_text_colour;
-        font-family: $main_font;
-        font-size: $paragraph_font_size;
-        line-height: 2;
+        @include standardParagraph;
     }
 
     li {
@@ -43,15 +39,7 @@
     }
 
     button {
-        background-color: $primary_accent_colour;
-        border-radius: 2px;
-        border-style: none;
-        color: $tertiary_text_colour;
-        font-family: $main_font;
-        font-size: $paragraph_font_size;
-        font-weight: bold;
-        padding: 10px 20px;
-        width: 120px;    
+        @include darkButton;    
     }
 }
 
@@ -69,6 +57,10 @@
     
     .text_container {
         align-items: center;
+        
+        button {
+            width: 100%;
+        }
     }
     .card_image{
         width: 100%;
