--- a/company-app/src/styles/_fontsAndTextStyles.scss
+++ b/company-app/src/styles/_fontsAndTextStyles.scss
@@ -15,6 +15,7 @@ $title_font_size: 20px;
         font-size: $paragraph_font_size;
         font-weight: bold;
         padding: 10px 20px;
+        text-decoration: none;
         width: 120px;
 }
 
@@ -27,6 +28,7 @@ $title_font_size: 20px;
     font-size: $paragraph_font_size;
     font-weight: bold;
     padding: 10px 20px;
+    text-decoration: none;
     width: 120px;
 }
 
