--- a/company-app/src/PlainTextCard/PlainTextCard.scss
+++ b/company-app/src/PlainTextCard/PlainTextCard.scss
@@ -17,11 +17,10 @@
     
     h2 {
         color:$primary_text_colour;
-        font-family: $main_font;
-        font-size: $title_font_size ;
-        font-weight: 400;
+        @include standardTitle;
     }
 }
+
 .plain_text_container {
     align-items: flex-start;
     display: flex;
@@ -29,10 +28,10 @@
     justify-content: space-evenly ;
     flex-wrap: wrap;
     gap: 20px;
+    
     p {
         color: $primary_text_colour;
-        font-family: $main_font;
-        font-size: $paragraph_font_size;
+        @include standardParagraph;
         max-width: 300px;
     }    
 
@@ -43,15 +42,7 @@
 }
 
 .link_plain_text_container{
-    background-color: $primary_accent_colour;
-    border-radius: 5px;
-    border-style: none;
-    color: $tertiary_text_colour;
-    font-family: $main_font;
-    font-size: $paragraph_font_size;
-    font-weight: bold ;
-    text-decoration: none;
-    padding: 10px 30px;
+    @include darkButton;
 }   
 
 
